@@ -19,6 +19,9 @@ Bug Fixes
   (RBA-4845)
 * Provide imageGroup information from the product definiton via the REST
   API. (RBL-4933)
+* Re-creating an image now clears the image's downloadable file list
+  immediately, preventing failed build logs from appearing on published
+  AMIs. (RBL-4342)
 
 Changes in 5.1.0
 ===============
